force-app/main/default/objects/OpportunityLineItem/fields/Average_Diesel_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Diesel_Price__c</fullName>
    <description>Average Diesel Price</description>
    <inlineHelpText>Average Diesel Price</inlineHelpText>
    <label>Average Diesel Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>