force-app/main/default/objects/OpportunityLineItem/fields/CC_Flat__c.field-meta.xml
<CustomField>
    <fullName>CC_Flat__c</fullName>
    <label>CC Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>