force-app/main/default/objects/OpportunityLineItem/fields/CFT__c.field-meta.xml
<CustomField>
    <fullName>CFT__c</fullName>
    <label>CFT</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>