force-app/main/default/objects/OpportunityLineItem/fields/COD_Remittance__c.field-meta.xml
<CustomField>
    <fullName>COD_Remittance__c</fullName>
    <label>COD Remittance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Tri-weekly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>