force-app/main/default/objects/OpportunityLineItem/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <label>Counter</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>