force-app/main/default/objects/OpportunityLineItem/fields/Credit_Card_Transaction_Charge__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Transaction_Charge__c</fullName>
    <label>Credit Card Transaction Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>