force-app/main/default/objects/OpportunityLineItem/fields/DC_Flat__c.field-meta.xml
<CustomField>
    <fullName>DC_Flat__c</fullName>
    <label>DC Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>