force-app/main/default/objects/OpportunityLineItem/fields/DC_Flat_Greater_then_2k__c.field-meta.xml
<CustomField>
    <fullName>DC_Flat_Greater_then_2k__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DC Flat Greater then 2k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>