force-app/main/default/objects/OpportunityLineItem/fields/DC_Percent_Greater_then_2k__c.field-meta.xml
<CustomField>
    <fullName>DC_Percent_Greater_then_2k__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DC Percent Greater then 2k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>