force-app/main/default/objects/OpportunityLineItem/fields/DC_percentage__c.field-meta.xml
<CustomField>
    <fullName>DC_percentage__c</fullName>
    <label>DC percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>