force-app/main/default/objects/OpportunityLineItem/fields/Delivery_re_attempt_charge_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Delivery_re_attempt_charge_Per_Kg__c</fullName>
    <label>Delivery re-attempt charge Per Kg</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>