force-app/main/default/objects/OpportunityLineItem/fields/DemurrageCharges_Per_awb_per_consignment__c.field-meta.xml
<CustomField>
    <fullName>DemurrageCharges_Per_awb_per_consignment__c</fullName>
    <label>DemurrageCharges Per awb per consignment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>