force-app/main/default/objects/OpportunityLineItem/fields/Diesel_Tolerance_Value__c.field-meta.xml
<CustomField>
    <fullName>Diesel_Tolerance_Value__c</fullName>
    <description>Diesel Tolerance Value</description>
    <label>Diesel Tolerance Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>