force-app/main/default/objects/OpportunityLineItem/fields/Divisor__c.field-meta.xml
<CustomField>
    <fullName>Divisor__c</fullName>
    <formula>27000 /  CFT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Divisor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>