force-app/main/default/objects/OpportunityLineItem/fields/Free_Storage_Period__c.field-meta.xml
<CustomField>
    <fullName>Free_Storage_Period__c</fullName>
    <label>Free Storage Period (days)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>