force-app/main/default/objects/OpportunityLineItem/fields/Frieght_Value_Factor__c.field-meta.xml
<CustomField>
    <fullName>Frieght_Value_Factor__c</fullName>
    <label>Frieght Value Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>