force-app/main/default/objects/OpportunityLineItem/fields/Intra_City__c.field-meta.xml
<CustomField>
    <fullName>Intra_City__c</fullName>
    <description>Intra City Charges</description>
    <label>Intra City</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>