force-app/main/default/objects/OpportunityLineItem/fields/IsCustom__c.field-meta.xml
<CustomField>
    <fullName>IsCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCustom</label>
    <type>Checkbox</type>
</CustomField>