force-app/main/default/objects/OpportunityLineItem/fields/Liability_per_consignment__c.field-meta.xml
<CustomField>
    <fullName>Liability_per_consignment__c</fullName>
    <label>Liability per consignment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>