force-app/main/default/objects/OpportunityLineItem/fields/LM_Charge__c.field-meta.xml
<CustomField>
    <fullName>LM_Charge__c</fullName>
    <label>LM Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>