force-app/main/default/objects/OpportunityLineItem/fields/Mall_Deliveries_Per_Kg__c.field-meta.xml
<CustomField>
    <fullName>Mall_Deliveries_Per_Kg__c</fullName>
    <label>Mall Deliveries Per Kg(Rs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>