force-app/main/default/objects/OpportunityLineItem/fields/Max_Dead_weight_package__c.field-meta.xml
<CustomField>
    <fullName>Max_Dead_weight_package__c</fullName>
    <label>Max Dead weight/package</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>