force-app/main/default/objects/OpportunityLineItem/fields/MaxDiscount__c.field-meta.xml
<CustomField>
    <fullName>MaxDiscount__c</fullName>
    <label>Maximum Discount</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>