force-app/main/default/objects/OpportunityLineItem/fields/Maximum_Liability_for_Forward_Percent__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Liability_for_Forward_Percent__c</fullName>
    <label>Maximum Liability for Forward</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>