force-app/main/default/objects/OpportunityLineItem/fields/Maximum_Liability_for_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Liability_for_Reverse__c</fullName>
    <defaultValue>2000</defaultValue>
    <label>Maximum Liability for Reverse</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>