force-app/main/default/objects/OpportunityLineItem/fields/Min_Billable_Weight__c.field-meta.xml
<CustomField>
    <fullName>Min_Billable_Weight__c</fullName>
    <label>Min Billable Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>