force-app/main/default/objects/OpportunityLineItem/fields/Minimum_Chargeable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Chargeable_Amount__c</fullName>
    <label>Minimum Chargeable Amount(Rs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>