force-app/main/default/objects/OpportunityLineItem/fields/Minimum_Chargeable_Weight__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Chargeable_Weight__c</fullName>
    <label>Minimum Chargeable Weight(Kg)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>