force-app/main/default/objects/OpportunityLineItem/fields/NB_Flat__c.field-meta.xml
<CustomField>
    <fullName>NB_Flat__c</fullName>
    <label>NB Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>