force-app/main/default/objects/OpportunityLineItem/fields/NB_Flat_for_other_bank__c.field-meta.xml
<CustomField>
    <fullName>NB_Flat_for_other_bank__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NB Flat for other bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>