force-app/main/default/objects/OpportunityLineItem/fields/NB_Percent_For_Other_Bank__c.field-meta.xml
<CustomField>
    <fullName>NB_Percent_For_Other_Bank__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NB Percent For Other Bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>