force-app/main/default/objects/OpportunityLineItem/fields/NB_Percentage__c.field-meta.xml
<CustomField>
    <fullName>NB_Percentage__c</fullName>
    <label>NB Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>