force-app/main/default/objects/OpportunityLineItem/fields/ODA_Per_MAwb__c.field-meta.xml
<CustomField>
    <fullName>ODA_Per_MAwb__c</fullName>
    <label>ODA Per MAwb(Rs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>