force-app/main/default/objects/OpportunityLineItem/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Link</label>
    <type>Checkbox</type>
</CustomField>