force-app/main/default/objects/OpportunityLineItem/fields/Public_holiday_SundayPickup_Delivery_Rs__c.field-meta.xml
<CustomField>
    <fullName>Public_holiday_SundayPickup_Delivery_Rs__c</fullName>
    <label>Public holiday/SundayPickup/Delivery(Rs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>