force-app/main/default/objects/OpportunityLineItem/fields/QR_CC_percentage__c.field-meta.xml
<CustomField>
    <fullName>QR_CC_percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QR CC percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>