force-app/main/default/objects/OpportunityLineItem/fields/Qr_Code__c.field-meta.xml
<CustomField>
    <fullName>Qr_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qr Code</label>
    <type>Checkbox</type>
</CustomField>