force-app/main/default/objects/OpportunityLineItem/fields/QR_DC_Flat__c.field-meta.xml
<CustomField>
    <fullName>QR_DC_Flat__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QR DC Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>