force-app/main/default/objects/OpportunityLineItem/fields/QR_DC_Flat_Greater_then_2k__c.field-meta.xml
<CustomField>
    <fullName>QR_DC_Flat_Greater_then_2k__c</fullName>
    <label>QR DC Flat Greater then 2k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>