force-app/main/default/objects/OpportunityLineItem/fields/QR_DC_Percent_Greater_then_2k__c.field-meta.xml
<CustomField>
    <fullName>QR_DC_Percent_Greater_then_2k__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QR DC Percent Greater then 2k</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>