force-app/main/default/objects/OpportunityLineItem/fields/QR_DC_percentage__c.field-meta.xml
<CustomField>
    <fullName>QR_DC_percentage__c</fullName>
    <label>QR DC percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>