force-app/main/default/objects/OpportunityLineItem/fields/QR_NB_Flat_for_other_bank__c.field-meta.xml
<CustomField>
    <fullName>QR_NB_Flat_for_other_bank__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QR NB Flat for other bank</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>