force-app/main/default/objects/OpportunityLineItem/fields/QR_NB_Percent_For_Other_Bank__c.field-meta.xml
<CustomField>
    <fullName>QR_NB_Percent_For_Other_Bank__c</fullName>
    <label>QR NB Percent For Other Bank</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>