force-app/main/default/objects/OpportunityLineItem/fields/QR_NB_Percentage__c.field-meta.xml
<CustomField>
    <fullName>QR_NB_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QR NB Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>