force-app/main/default/objects/OpportunityLineItem/fields/QR_UPI_Flat_greater_then_2k__c.field-meta.xml
<CustomField>
    <fullName>QR_UPI_Flat_greater_then_2k__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QR UPI Flat greater then 2k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>