force-app/main/default/objects/OpportunityLineItem/fields/QR_UPI_Percent_for_greater_then_2k__c.field-meta.xml
<CustomField>
    <fullName>QR_UPI_Percent_for_greater_then_2k__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QR UPI Percent for greater then 2k</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>