force-app/main/default/objects/OpportunityLineItem/fields/QR_UPI_percentage__c.field-meta.xml
<CustomField>
    <fullName>QR_UPI_percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>QR UPI percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>