force-app/main/default/objects/OpportunityLineItem/fields/QR_Wallet_percentage__c.field-meta.xml
<CustomField>
    <fullName>QR_Wallet_percentage__c</fullName>
    <label>QR Wallet percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>