force-app/main/default/objects/OpportunityLineItem/fields/ROV_on_invoice_value__c.field-meta.xml
<CustomField>
    <fullName>ROV_on_invoice_value__c</fullName>
    <label>ROV (on invoice value)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>