force-app/main/default/objects/OpportunityLineItem/fields/RoV_Surcharge_RS_10_000__c.field-meta.xml
<CustomField>
    <fullName>RoV_Surcharge_RS_10_000__c</fullName>
    <label>RoV Surcharge(&gt;RS 10,000)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>