force-app/main/default/objects/OpportunityLineItem/fields/Rural_Pin_Code_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Rural_Pin_Code_Pricing__c</fullName>
    <label>Rural Pin Code Pricing</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>