force-app/main/default/objects/OpportunityLineItem/fields/Service_Charges__c.field-meta.xml
<CustomField>
    <fullName>Service_Charges__c</fullName>
    <label>GST</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>