force-app/main/default/objects/OpportunityLineItem/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Corporate Approved</fullName>
            </value>
            <value>
                <fullName>Corporate Rejected</fullName>
            </value>
            <value>
                <fullName>Client Approved</fullName>
            </value>
            <value>
                <fullName>Client Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>