force-app/main/default/objects/OpportunityLineItem/fields/Threshold_Charge__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Charge__c</fullName>
    <label>Delivery Charges Threshold</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>