force-app/main/default/objects/OpportunityLineItem/fields/Time_specific_deliveries_Per_MAwb__c.field-meta.xml
<CustomField>
    <fullName>Time_specific_deliveries_Per_MAwb__c</fullName>
    <label>Time specific deliveries Per MAwb</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>