force-app/main/default/objects/OpportunityLineItem/fields/Transaction_Charge__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Charge__c</fullName>
    <label>Debit Card Transaction Charge</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>