force-app/main/default/objects/OpportunityLineItem/fields/UPI_Flat__c.field-meta.xml
<CustomField>
    <fullName>UPI_Flat__c</fullName>
    <label>UPI Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>