force-app/main/default/objects/OpportunityLineItem/fields/UPI_Percent_for_greater_then_2k__c.field-meta.xml
<CustomField>
    <fullName>UPI_Percent_for_greater_then_2k__c</fullName>
    <label>UPI Percent for greater then 2k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>