force-app/main/default/objects/OpportunityLineItem/fields/UPI_percentage__c.field-meta.xml
<CustomField>
    <fullName>UPI_percentage__c</fullName>
    <label>UPI percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>