force-app/main/default/objects/OpportunityLineItem/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <formula>IF( OR ( ISBLANK( Counter__c ),  ISNULL( Counter__c ) )    , &#39;&#39; , &#39;Version &#39; + TEXT(Counter__c) + &#39;.0&#39;)</formula>
    <label>Version</label>
    <type>Text</type>
</CustomField>