force-app/main/default/objects/OpportunityLineItem/fields/Volumetric_Formulae__c.field-meta.xml
<CustomField>
    <fullName>Volumetric_Formulae__c</fullName>
    <label>Volumetric Divisor</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>