force-app/main/default/objects/OpportunityLineItem/fields/Wallet_Flat__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Flat__c</fullName>
    <label>Wallet Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>