force-app/main/default/objects/OpportunityLineItem/fields/Wallet_percentage__c.field-meta.xml
<CustomField>
    <fullName>Wallet_percentage__c</fullName>
    <label>Wallet percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>