force-app/main/default/objects/OpportunityLineItem/fields/Wallet_Transaction_Charge__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Transaction_Charge__c</fullName>
    <label>Wallet Transaction Charge</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>