force-app/main/default/objects/OpportunityLineItem/fields/Wallet_Transaction_Rate__c.field-meta.xml
<CustomField>
    <fullName>Wallet_Transaction_Rate__c</fullName>
    <label>Wallet Transaction Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>