force-app/main/default/objects/OpportunityLineItem/fields/Way_Bill_Charge__c.field-meta.xml
<CustomField>
    <fullName>Way_Bill_Charge__c</fullName>
    <label>Way Bill Charge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>