force-app/main/default/objects/OpportunityLineItem/fields/Zone_A_Additional_1kg_Above_5kg__c.field-meta.xml
<CustomField>
    <fullName>Zone_A_Additional_1kg_Above_5kg__c</fullName>
    <label>Zone A Additional 1kg Above 5kg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>