force-app/main/default/objects/OpportunityLineItem/fields/Zone_A_DTO_every_add_500gm__c.field-meta.xml
<CustomField>
    <fullName>Zone_A_DTO_every_add_500gm__c</fullName>
    <label>Zone A - DTO every add 500gm</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>