force-app/main/default/objects/OpportunityLineItem/fields/Zone_A_Every_Add_500_gms_upto_3_kgs__c.field-meta.xml
<CustomField>
    <fullName>Zone_A_Every_Add_500_gms_upto_3_kgs__c</fullName>
    <label>Zone A -Every Add 500 gms (upto 3 kgs)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>