force-app/main/default/objects/OpportunityLineItem/fields/Zone_B_Additional_250_gms_till_500_gms__c.field-meta.xml
<CustomField>
    <fullName>Zone_B_Additional_250_gms_till_500_gms__c</fullName>
    <label>Zone B Additional 250 gms till 500 gms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>